<resources>
    <string name="app_name" translatable="false">SG-Patrol</string>

    <string name="empty_field_error">This field cannot be blank</string>
    <string name="rename">rename</string>
    <string name="csv">csv</string>
    <string name="dialog_new_sensor_title">Configure Sensors</string>
    <string name="invalid_mum_sensors">invalid number of sensors</string>
    <string name="name_title">NAME</string>
    <string name="id_title">ID</string>
    <string name="map_location_title">PLACED</string>
    <string name="status_title">ACTIVE</string>
    <string name="type_title">TYPE</string>
    <string name="time_title">TIME</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="content_delete_extra_sensor">The System has more sensors than configured, do you want to delete extra
        sensors ?
    </string>
    <string name="remove_extra_sensors">Remove extra sensors</string>
    <string name="csv_date_title"><![CDATA[Date&Time]]></string>
    <string name="csv_name_title">Sensor Name</string>
    <string name="csv_id_title">ID</string>
    <string name="csv_alarm_type_title">Alarm Type</string>
    <string name="csv_latitude_title">latitude</string>
    <string name="csv_longitude_title">longitude</string>
    <string name="sensor_table_title">Sensors Table</string>
    <string name="map_title">Map</string>
    <string name="config_title">Settings</string>
    <string name="alarm_log_title">Alarm Log</string>
    <string name="date_title">DATE</string>
    <string name="save">save</string>
    <string name="define_sensor_amount">Number of sensors</string>
    <string name="choose_alarm_sound">Choose alarm sound</string>
    <string name="vibration_when_alarm">Vibration when alarm</string>
    <string name="alarm_flickering_time">Alarm flickering time</string>
    <string name="default_str">default</string>


    <string-array name="state_types">
        <item>Car</item>
        <item>Intruder</item>
        <item>Motion</item>
        <item>Sensor disconnected</item>
        <item>System OK</item>
        <item>Low battery</item>
        <item>Dual tech alarm</item>
    </string-array>
    <string name="map_view">Map view</string>
    <string name="language">Language</string>
    <string name="satellite">satellite</string>
    <string name="map">map</string>
    <string name="sensors_save_successfully">The sensors were successfully saved</string>
    <string name="time_flickering_save_successfully">Time flickering was successfully saved</string>
    <string name="english">English</string>
    <string name="no_selected_sound">no selected sound</string>
    <string name="channel_name">my_channel_01_name</string>
    <string name="channel_description">my_channel_01_description</string>
    <string name="share">share</string>
    <string name="enter_code">enter activation code</string>
    <string name="wrong_activate_code">wrong activate code</string>
    <string name="activate">Activate</string>
    <string name="error">Error</string>
    <string name="general_desc">description</string>
    <string name="email_subject">My Code for SG-Patrol App</string>
    <string name="delete_all">Delete all</string>
    <string name="do_you_really_want_delete_all_alarm">Do you really want to delete all alarms</string>
    <string name="receiver_disconnected">Receiver Disconnected</string>
    <string name="OK">OK</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoidG9tZXJjaG9lbiIsImEiOiJja2psYWJ0M201N3ZuMnJucW4zNWZqYzNvIn0.fZ3nmtGLC2X-PKfuNY5wfQ</string>
    <string name="simple_offline_end_progress_success">simple offline end progress success</string>
    <string name="no_selected_location">No places selected</string>
    <string name="sensor_details">Sensor details</string>
    <string name="save_offline_map">Save offline map</string>
    <string name="results">Results</string>
    <string name="save_map">Save map</string>
    <string name="delete_last_map">Delete the last map</string>
    <string name="disconnect_usb">Disconnect the usb</string>
    <string name="this_will_disconnect_the_usb">This will disconnect the usb</string>
    <string name="always_show_sensor_name">Always show the sensor name</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="forward_email">Forward email</string>
    <string name="cancel">Cancel</string>
    <string name="email_setting">Email Settings</string>
    <string name="an_alert_was_received">An alert was received</string>
    <string name="email_content">Accept %1$s alarm from unit %2$s in %3$s</string>
    <string name="outgoing_mail_server_title">Outgoing  Server</string>
    <string name="outgoing_mail_port_title">Outgoing  Port</string>
    <string name="recipient">Recipient</string>
    <string name="no_fill_account">You have not filled in email account information</string>
    <string name="sender_email">Sender Email</string>
    <string name="password_title1">Password</string>
    <string name="use_ssl_title1">Using SSL</string>
    <string name="des">description</string>
    <string name="usb_is_disconnect">The usb is disconnected</string>
    <string name="commands_title">Commands</string>
    <string name="select_sensor">Select a sensor</string>
    <string name="get_sens_level">"Get Sens"</string>
    <string name="no_selected_sensor">"You did not select a sensor"</string>
    <string name="get_sens_level_rsp">Get Sens</string>
    <string name="get_min_power_rsp" translatable="false">Get Min Power</string>
    <string name="get_snr_level_rsp" translatable="false">Get Snr</string>
    <string name="get_logic_param_level_rsp" translatable="false">Get Logic Param</string>
    <string name="close">Close</string>
    <string name="set_sens_level">Set Sens</string>
    <string name="car">Car</string>
    <string name="intruder">Intruder</string>
    <string name="error_zero_sens">Zero can not be sent both for alert and for car and intruder</string>
    <string name="connect">Connect</string>
    <string name="disconnect">disconnect</string>
    <string name="set_ref_timer">"Set RF On Timer"</string>
    <string name="try_connect">Connecting…</string>
    <string name="no_response_sensor">"No response from the sensor"</string>
    <string name="another_process">There is another process</string>
    <string name="seismic">Seismic</string>
    <string name="edit_sensor">Edit Sensor</string>
    <string name="connected">connected</string>
    <string name="set_system_time">Set System Time</string>
    <string name="set_snr" translatable="false">Set SNR</string>
    <string name="get_snr" translatable="false">Get SNR</string>
    <string name="set_logic_param" translatable="false">Set Logic Param</string>
    <string name="select_logic_param" translatable="false">Logic param</string>
    <string name="count" translatable="false">Count</string>
    <string name="duration" translatable="false">Duration</string>
    <string name="seconds" translatable="false">Suspend</string>
    <string name="get_logic_param" translatable="false">Get Logic Param</string>
    <string name="set_min_power" translatable="false">Set Min Power</string>
    <string name="get_min_power" translatable="false">Get Min Power</string>
    <string name="min_power" translatable="false">Min Power</string>
    <string name="value_out_of_range" translatable="false">The value is out of range (1-7)</string>
    <string name="value_out_of_range_15_256" translatable="false">The value is out of range (15-256)</string>
    <string name="tile_download_complete" translatable="false">Tile download complete:</string>
    <string name="remove_tile_regin_successfully" translatable="false">Remove tile regin has been complete</string>
    <string name="delete_all_maps" translatable="false">Delete all maps</string>
    <string name="delete_process" translatable="false">Delete...</string>
    <string name="date_time" translatable="false">Date and time</string>
    <string name="systems_filter" translatable="false">System</string>
    <string name="filter_by" translatable="false">Filter by:</string>
    <string name="description" translatable="false">description</string>
    <string name="select_all" translatable="false">Select all</string>
    <string name="reset" translatable="false">reset</string>
    <string name="from" translatable="false">from</string>
    <string name="to" translatable="false">to</string>
    <string name="ok" translatable="false">OK</string>
    <string name="date_older" translatable="false">End date may not be earlier than start date</string>
    <string name="no_selected_alarms" translatable="false">No selected alarm</string>
    <string name="selected_alarms" translatable="false">selected alarm</string>
    <string name="do_you_realy_want_delete_selected_alarm" translatable="false">Do you realy want to delete selected alarms?</string>
    <string name="suspend" translatable="false">Suspend</string>
    <string name="value_cannot_be_zero" translatable="false">The value cannot be zero</string>
    <string name="the_sensor_is_not_connected" translatable="false">The sensor is not connected please press connect</string>
    <string name="subnet_enable" translatable="false">Subnet Enable</string>

    <string-array name="car_ids">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="sensor_ids">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="sensor_type">
        <item>Seismic</item>
        <item>PIR</item>
        <item>Radar</item>
        <item>Vibration</item>
    </string-array>

</resources>
